--- a/recipe0.html
+++ b/recipe0.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header><!--content for header--></header>
-    <h1>ABC</h1>
+    <h1><!-- Name of recipe--></h1>
     <img src="ABC" alt="">
     <h3>COOKTIME:</h3>
     <p>ABC</p>
