--- a/Testing.html
+++ b/Testing.html
@@ -14,7 +14,7 @@
   <script>mocha.setup('bdd')</script>
 
   <!-- load code you want to test here -->
-  <!-- <script src="Testing.js"></script> -->
+  <script src="home.html"></script>
   <!-- load your test files here -->
   <script src="Testing.js"></script>
   <script>mocha.run()</script>
