--- a/recipe0.html
+++ b/recipe0.html
@@ -6,6 +6,7 @@
     <title>Recipe0</title>
     <link rel="stylesheet" href="recipe.css">
     <script src="reviewf.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <header><!--content for header--></header>
