--- a/aboutus.html
+++ b/aboutus.html
@@ -9,14 +9,17 @@
 </head>
 <body>
     <div class="topnav">
-        <img src=" https://img.freepik.com/premium-vector/chef-logo-vector_20448-270.jpg?" alt="" width="150" >
+        <a href="home.html">
+            <img src=" https://img.freepik.com/premium-vector/chef-logo-vector_20448-270.jpg?" alt="" width="150" height="150">
+        </a>
+            
     
       <input type="text" id="searchbar" placeholder="Search..">
       <button type="submit">Submit</button>
     </div>
     <div class="searchBottom">
-    <a class="active" href="file:///Users/anshpuri/Documents/GitHub/chefs/home.html">Home</a>
-    <a href="#about">Recipe List</a>
+    <a class="active" href="home.html">Home</a>
+    <a href="search.html">Recipe List</a>
     <a href="#contact">About Us</a>
     </div>
     <div class="sumamry">
