--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="home.css" type="text/css" >
     <link rel="stylesheet" href="PageFormat.css">
     <script src="home.js" type="text/javascript"></script>
+    <script src="searchf.js"></script>
+    <script src="sortf.js"></script>
 </head>
 <body>
   <div class="wrapper">
