--- a/recipe1.html
+++ b/recipe1.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
+
     <title>Recipe1</title>
     <link rel="stylesheet" href="recipe.css">
+    <link rel="stylesheet" href="PageFormat.css">
+
     <script src="reviewf.js"></script>
 </head>
 <body>
