changes no time

--- a/recipe0.html
+++ b/recipe0.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">'
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Cauliflower and Walnut Soup</title>
     <link rel="stylesheet" href="recipe.css">
     <link rel="stylesheet" href="PageFormat.css">
